--- a/image_processing/p3/2021105741 황준태 p3.ipynb
+++ b/image_processing/p3/2021105741 황준태 p3.ipynb
@@ -426,7 +426,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. 가우시안 필터는 이미지를 흐리게 하고 노이즈를 줄이는 선형 필터이다. 중앙 픽셀을 강조하고, 중앙 픽셀과의 거리에 따라 픽셀을 억제한다."
+    "1. 가우시안 필터는 이미지를 흐리게 하고 노이즈를 줄이는 선형 필터이다. 중앙 픽셀을 강조하고, 중앙 픽셀과의 거리에 따라 픽셀을 억제한다. 또한, 등방성 필터이다.\n",
+    "2. Bilateral(양방향) 필터는 가장자리를 유지하면서 이미지를 매끄럽게 만드는 비선형 필터이다. 가우스 커널을 사용하여 이미지를 흐리게 처리하며, 이 때 인접 픽셀 간의 차이도 고려한다. 양방향 필터는 중앙 픽셀로부터의 거리와 픽셀값을 고려하여 다른 가중치를 부여한다. 또한, 비등방성 필터이다."
    ]
   },
   {
@@ -437,10 +438,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[답변작성]"
+    "1. 이미지 블러를 통해 노이즈를 제거한다.\n",
+    "2. 그 후, 이미지의 가장자리와 세부 사항을 강조하는 마스크를 만든다.\n",
+    "3. 원본 이미지에 마스크를 추가하여 선명도를 높인다.\n",
+    "\n",
+    "이미지 블러로 가장자리와 세부 사항을 강조하는 마스크를 만들어, 원본 이미지에 추가하여 선명도를 높인다."
    ]
   },
   {
@@ -451,10 +457,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[답변작성]"
+    "가우시안 필터는 이웃하는 픽셀 값을 평균화하여 이미지를 부드럽게 한다. 하지만, 주변 픽셀과 값이 매우 다른 픽셀의 경우에는 비교적 덜 효과적이다.\n",
+    "\n",
+    "\n",
+    "중간값 필터는 인접한 픽셀 값을 해당 픽셀의 중간값으로 대체하여 작동한다. 중간값 필터의 경우 노이즈 외의 이미지 영향을 주지 않고 노이즈 픽셀을 식별하고 제거할 수 있으므로 주변 픽셀과 값이 매우 다른 픽셀의 노이즈도 제거할 수 있다. 그러나 인접 픽셀의 값을 고려하지 않기에 가우시안 노이즈를 줄이는 데는 덜 효과적이다.\n"
    ]
   },
   {
